* Define _<<_identity_assertion_generator,identity assertion generator>>._

*20 August 2024*

* Merge with updated 1.0-draft version of this specification.

*09 September 2024*

* Merge with 1.0 final version of this specification.
* Rename xref:_identity_claims_aggregation[xrefstyle=full], from “W3C verifiable credentials.”

*10 September 2024*

* (Clerical) Fix `sig_type` in identity claims aggregation examples.

*16 September 2024*

* Add guidance on how _<<_identity_claims_aggregator,identity claims aggregator>>_ should sign the asset-specific credential it issues.
* Rewrite verifiable presentation example to reflect common identity claims aggregation workflow.

*25 September 2024*

* (Clerical) Use numbered sections for top-level fields in description of xref:vc-credentialsubject-verifiedIdentities[xrefstyle=full].
* (Clerical) Remove mention of C2PA 2.1 spec being in draft status.

*30 September 2024*

* Tweak wording of `provider.name` entry to support localization of provider name.

*02 October 2024*

* (Clerical) Add anchor references pointing to workflows within verifiable presentation example.

*08 October 2024*

* Consolidate wording about `cawg.` and other externally-defined labels.
* Remove `proof` entry from `verifiedIdentities[n]` structure.
* Add option to use RFC 3161 timestamp in ICA COSE signature.

*04 November 2024*

* Added new introduction to identity claims aggregation section.

*11 November 2024*

* Allow identity claims aggregators to use either version 1.1 or 2.0 of the Verifiable credentials data model.
* Revise discussion of use cases to clarify that copyright information is not part of the identity assertion.

*04 December 2024*

* Add support for verified web site.

*06 January 2025*

* Finalize URI for ICA context and schema.

*22 January 2025*

* Add optional `method` field for describing the technique used to verify account/URI control.
* Add section on credential status / revocation.